--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elarabackend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Elara backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,13 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "fdir": "^6.4.0",
+    "file-entry-cache": "^8.0.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^7.14.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "zod": "^3.23.8"
+    },
+  "optionalDependencies": {
+    "better-sqlite3": "^9.6.0"
   },
   "devDependencies": {
     "electron": "^39.0.0"
